--- a/Chat App Assignment/styles.css
+++ b/Chat App Assignment/styles.css
@@ -1,73 +1,66 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
 body {
-    scroll-behavior: smooth;
-    background-image: url("./Assets/authpagesbackground.jpg");
-    overflow-x: visible;
+  scroll-behavior: smooth;
+  background-image: url("./Assets/authpagesbackground.jpg");
 }
 
 .Container {
-    margin: 90px auto;
-    border-radius: 10px;
-    text-align: center;
-    width: fit-content;
-    background-color: #667eea;
-    border: 2px solid #6f4ba8;
-    box-shadow:0 4px 8px 0 #6f4ba8, 0 6px 20px 0 #667eea;
-    padding: 20px 50px;
+  margin: 150px auto;
+  border-radius: 10px;
+  text-align: center;
+  width: fit-content;
+  background-color: #667eea;
+  border: 2px solid #6f4ba8;
+  box-shadow:0 4px 8px 0 #6f4ba8, 0 6px 20px 0 #667eea;
+  padding: 20px 50px;
 }
 
 .Container h3 {
-    text-align: center;
-    font-weight: 700;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  text-align: center;
+  font-weight: 700;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.SignUpInputs {
-    margin-top: 20px;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    width: fit-content;
+.SignInInputs {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: fit-content;
 }
 
-.SignUpInputs input {
-    margin: 0 auto;
-    box-shadow:0 4px 8px 0 #6f4ba8, 0 6px 20px 0 #667eea;
-    height: 40px;
-    text-align: center;
-    border-radius: 8px;
-    padding: 10px 60px;
-    width: fit-content;
+.SignInInputs input {
+  margin: 0 auto;
+  box-shadow:0 4px 8px 0 #6f4ba8, 0 6px 20px 0 #667eea;
+  height: 40px;
+  text-align: center;
+  border-radius: 8px;
+  padding: 10px 60px;
+  width: fit-content;
 }
 
 #showError_P {
-    color: #ff0000;
-    font-size: 18px;
+  color: #ff0000;
+  font-size: 18px;
 }
 
-.signUpButton {
-    border: none;
-    padding: 5px 35px;
-    border-radius: 8px;
-    color: #6f4ba8;
-    font-weight: 700;
-    background-color: #ffffff;
-    margin-bottom: 10px;
+.signInButton {
+  border: none;
+  padding: 5px 35px;
+  border-radius: 8px;
+  color: #6f4ba8;
+  font-weight: 700;
+  background-color: #ffffff;
+  margin-bottom: 10px;
 }
 
-.signUpButton:hover {
-    background-color: #6f4ba8;
-    color: #ffffff;
-    border: 1px solid #8b5bab;
+.signInButton:hover {
+  background-color: #6f4ba8;
+  color: #ffffff;
+  border: 1px solid #8b5bab;
 }
 
 .Container a {
-    color: #ffffff;
+  color: #ffffff;
 }
 
 .IDButtonsDiv {
